<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/iv_slika"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_name"
        android:text="@string/naziv_jela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_slika"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/tv_opis"
        android:layout_below="@+id/tv_name"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:id="@+id/sp_category"
        android:layout_below="@+id/listOfSastojak"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cena"
        android:id="@+id/tv_cena"
        android:layout_below="@+id/sp_category"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:text="@string/cal"

        android:id="@+id/tv_kalorija"/>



    <RatingBar
        android:id="@+id/rb_ocena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_kalorija"

        android:numStars="5"/>



    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"
        android:layout_below="@+id/rb_ocena"

        android:id="@+id/listOfSastojak"/>




   <!-- <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/listOfSastojak"
        android:id="@+id/btn_order"
        />-->





</RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_stat_buy" />


</android.support.design.widget.CoordinatorLayout>